FrameLayout en content_navigation

--- a/Organizador/src/main/res/layout/content_navigation_drawer.xml
+++ b/Organizador/src/main/res/layout/content_navigation_drawer.xml
@@ -8,4 +8,9 @@
     tools:context=".NavigationDrawer.NavigationDrawer"
     tools:showIn="@layout/app_bar_navigation_drawer">
 
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/screen_area"></FrameLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
