--- a/Organizador/src/main/res/menu/activity_navigation_drawer_drawer.xml
+++ b/Organizador/src/main/res/menu/activity_navigation_drawer_drawer.xml
@@ -5,9 +5,9 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_camera"
+            android:id="@+id/nuevos_estudiantes"
             android:icon="@drawable/ic_menu_camera"
-            android:title="Import" />
+            android:title="Nuevos Estudiantes" />
         <item
             android:id="@+id/nav_gallery"
             android:icon="@drawable/ic_menu_gallery"
@@ -22,17 +22,5 @@
             android:title="Tools" />
     </group>
 
-    <item android:title="Communicate">
-        <menu>
-            <item
-                android:id="@+id/nav_share"
-                android:icon="@drawable/ic_menu_share"
-                android:title="Share" />
-            <item
-                android:id="@+id/nav_send"
-                android:icon="@drawable/ic_menu_send"
-                android:title="Send" />
-        </menu>
-    </item>
 
 </menu>
