--- a/Organizador/src/main/res/layout/fragment_lister_estudiantes.xml
+++ b/Organizador/src/main/res/layout/fragment_lister_estudiantes.xml
@@ -5,10 +5,8 @@
     android:layout_height="match_parent"
     tools:context=".ListerEstudiantes.ListerEstudiantes">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
-
+        android:id="@+id/list_item" />
 </FrameLayout>
