--- a/Organizador/src/main/res/layout/fragment_lister_estudiantes.xml
+++ b/Organizador/src/main/res/layout/fragment_lister_estudiantes.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ListerEstudiantes.ListerEstudiantes">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    tools:context=".ListerEstudiantes.ListerEstudiantes"
+    android:orientation="vertical">
 
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/list_item" />
-</FrameLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
