--- a/Organizador/src/main/res/layout/activity_information.xml
+++ b/Organizador/src/main/res/layout/activity_information.xml
@@ -40,6 +40,7 @@
                 android:paddingStart="60dp"
                 android:hint="@string/Ac_information_txt_nombre_estudiante"
                 android:layout_height="45dp"
+                android:paddingRight="10dp"
                 android:background="@drawable/edit_nom_user"/>
 
 
@@ -48,6 +49,7 @@
                 android:layout_width="328dp"
                 android:paddingStart="60dp"
                 android:hint="@string/Ac_login_txt_email"
+                android:paddingRight="10dp"
                 android:background="@drawable/edit_email"
                 android:layout_height="45dp" />
 
@@ -56,6 +58,7 @@
                 android:layout_width="328dp"
                 android:paddingStart="60dp"
                 android:hint="@string/Ac_login_txt_telefono"
+                android:paddingRight="10dp"
                 android:background="@drawable/edit_telef"
                 android:layout_height="45dp" />
 
@@ -65,6 +68,7 @@
                 android:layout_width="328dp"
                 android:paddingStart="60dp"
                 android:hint="@string/Ac_information_txt_telefono_emergencia"
+                android:paddingRight="10dp"
                 android:background="@drawable/edit_telef"
                 android:layout_height="45dp" />
 
@@ -75,6 +79,7 @@
                 android:layout_width="328dp"
                 android:layout_height="45dp"
                 android:hint="@string/Ac_information_txt_residencia"
+                android:paddingRight="10dp"
                 android:background="@drawable/edit_residencia"
                 android:paddingStart="60dp"/>
 
@@ -83,6 +88,7 @@
                 android:layout_width="328dp"
                 android:layout_height="45dp"
                 android:hint="@string/Ac_information_txt_carrera"
+                android:paddingRight="10dp"
                 android:background="@drawable/edit_carrera"
                 android:paddingStart="60dp"/>
 
@@ -90,15 +96,23 @@
                 android:id="@+id/edtTransporte"
                 android:layout_width="328dp"
                 android:hint="@string/Ac_information_txt_transporte"
+                android:paddingRight="10dp"
                 android:background="@drawable/edit_transporte"
                 android:paddingStart="60dp"
                 android:layout_height="45dp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Formato AAAA-MM-DD HH:MM:SS"
+                android:layout_marginStart="10dp"/>
 
             <EditText
                 android:id="@+id/edtFecha"
                 android:layout_width="328dp"
                 android:paddingStart="60dp"
                 android:hint="@string/Ac_information_txt_fecha"
+                android:paddingRight="10dp"
                 android:background="@drawable/edit_fecha"
                 android:layout_height="45dp"/>
 
@@ -127,26 +141,65 @@
                 android:layout_height="match_parent"
                 android:layout_marginStart="10dp"
                 android:text="@string/Ac_information_txt_opcionales"
+                android:textColor="#000000"
                 android:layout_marginBottom="20dp"
                 />
 
-            <EditText
-                android:id="@+id/edtHotel"
-                android:layout_width="328dp"
-                android:paddingStart="60dp"
-                android:hint="@string/Ac_information_txt_hotel"
-                android:background="@drawable/edit_hotel"
-                android:layout_height="45dp"/>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/Ac_information_txt_hotel">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/edtHotel"/>
+
+            </com.google.android.material.textfield.TextInputLayout>
 
 
-            <EditText
-                android:id="@+id/edtInfo_Adicional"
-                android:layout_width="328dp"
-                android:paddingStart="60dp"
-                android:hint="@string/Ac_information_txt_info"
-                android:background="@drawable/edit_info_adicional"
-                android:layout_height="45dp"/>
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/Ac_information_txt_info">
 
+                <com.google.android.material.textfield.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/edtInfo_Adicional"/>
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <!--
+
+
+
+
+
+                      <EditText
+    android:id="@+id/edtHotel"
+    android:layout_width="328dp"
+    android:paddingStart="60dp"
+    android:hint="@string/Ac_information_txt_hotel"
+    android:paddingRight="10dp"
+    android:layout_height="wrap_content"/>
+
+
+<EditText
+    android:id="@+id/edtInfo_Adicional"
+    android:layout_width="328dp"
+    android:paddingStart="60dp"
+    android:hint="@string/Ac_information_txt_info"
+    android:paddingRight="10dp"
+    android:layout_height="wrap_content"/>
+
+
+
+
+
+
+            -->
         </LinearLayout>
 
 
