--- a/Estudiante/src/main/res/values/colors.xml
+++ b/Estudiante/src/main/res/values/colors.xml
@@ -1,6 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
+    <color name="primaryColor">#673ab7</color>
+    <color name="primaryDarkColor">#320b86</color>
     <color name="colorAccent">#D81B60</color>
+
+
+    <color name="primaryLightColor">#9a67ea</color>
+    <color name="secondaryColor">#ffab00</color>
+    <color name="secondaryLightColor">#ffdd4b</color>
+    <color name="secondaryDarkColor">#c67c00</color>
+    <color name="primaryTextColor">#ffffff</color>
+    <color name="secondaryTextColor">#DD000000</color>
+    <color name="tag_purple">#64B39DDB</color>
+    <color name="tag_yellow">#FFF9C4</color>
+    <color name="tag_gray">#1E000000</color>
+    <color name="fond_ecran">#FAFAFA</color>
 </resources>
