--- a/Organizador/src/main/res/layout/activity_information.xml
+++ b/Organizador/src/main/res/layout/activity_information.xml
@@ -53,6 +53,13 @@
                 android:background="@drawable/edit_email"
                 android:layout_height="45dp" />
 
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:text="@string/Ac_information_txt_telefono_sin_identificador"
+                android:textSize="12dp"/>
+
             <EditText
                 android:id="@+id/edtTelefono"
                 android:layout_width="328dp"
@@ -103,18 +110,13 @@
                 android:paddingStart="60dp"
                 android:layout_height="45dp" />
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Formato AAAA-MM-DD HH:MM:SS"
-                android:layout_marginStart="10dp"/>
-
-            <EditText
+            <Button
                 android:id="@+id/edtFecha"
                 android:layout_width="328dp"
                 android:paddingStart="60dp"
                 android:hint="@string/Ac_information_txt_fecha"
                 android:paddingRight="10dp"
+                android:textAlignment="textStart"
                 android:background="@drawable/edit_fecha"
                 android:layout_height="45dp"/>
 
