--- a/Estudiante/src/main/res/layout/activity_register.xml
+++ b/Estudiante/src/main/res/layout/activity_register.xml
@@ -52,6 +52,23 @@
                 android:paddingRight="10dp"
                 android:background="@drawable/edit_email"
                 android:layout_height="45dp" />
+
+            <EditText
+                android:id="@+id/edTxtPassword"
+                android:layout_width="328dp"
+                android:layout_height="45dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:ems="10"
+                android:hint="@string/Ac_login_txt_password"
+                android:inputType="textPassword"
+                android:background="@drawable/edit_password"
+                android:paddingStart="60dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/edTxtUser" />
+            
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
