Transiciones de Fragment

--- a/Estudiante/src/main/res/layout/content_navigation_drawer.xml
+++ b/Estudiante/src/main/res/layout/content_navigation_drawer.xml
@@ -8,4 +8,10 @@
     tools:context=".Navigation.NavigationDrawer"
     tools:showIn="@layout/app_bar_navigation_drawer">
 
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/screen_area"></FrameLayout>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
