--- a/Estudiante/src/main/res/layout/fragment_my_info.xml
+++ b/Estudiante/src/main/res/layout/fragment_my_info.xml
@@ -25,6 +25,14 @@
                 android:textStyle="bold"
                 android:lines="5"
                 />
+
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/organizadorEncargado"
+                android:text="La persona que te irá a buscar el día de tu llegada es : "
+                android:textStyle="italic"/>
             <EditText
                 android:id="@+id/edtNombre"
                 android:layout_width="328dp"
@@ -170,6 +178,15 @@
 
             </com.google.android.material.textfield.TextInputLayout>
 
+            <Button
+                android:id="@+id/btnLogin"
+                android:layout_width="315dp"
+                android:layout_height="55dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="8dp"
+                android:background="@drawable/btn_connecter"
+                android:text="@string/Ac_login_txt_registrarse"/>
         </LinearLayout>
 
 
