--- a/Estudiante/src/main/res/menu/activity_navigation_drawer_drawer.xml
+++ b/Estudiante/src/main/res/menu/activity_navigation_drawer_drawer.xml
@@ -16,6 +16,11 @@
             android:id="@+id/menu_checklist"
             android:icon="@drawable/liste"
             android:title="@string/menu_checklist" />
+
+        <item
+            android:id="@+id/menu_contacto"
+            android:icon="@drawable/ic_contacts_black_24dp"
+            android:title="@string/menu_contacto" />
     </group>
 
 
