Evitar recargar fragment cuando ya está en pantalla

--- a/Estudiante/src/main/res/layout/activity_register.xml
+++ b/Estudiante/src/main/res/layout/activity_register.xml
@@ -32,7 +32,7 @@
     </LinearLayout>
 
     <fragment
-        android:id="@+id/myInfo"
+        android:id="@+id/menu_myInfo"
         android:name="me.dioxo.estudiante.MyInfo.MyInfoFragment"
         android:layout_below="@id/linear"
         android:layout_width="wrap_content"
