--- a/Estudiante/src/main/res/menu/activity_navigation_drawer_drawer.xml
+++ b/Estudiante/src/main/res/menu/activity_navigation_drawer_drawer.xml
@@ -5,7 +5,7 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/myInfo"
+            android:id="@+id/menu_myInfo"
             android:icon="@drawable/ic_person_black_24dp"
             android:title="@string/menu_mi_informacion" />
         <item
