--- a/Estudiante/src/main/res/layout/fragment_about_us.xml
+++ b/Estudiante/src/main/res/layout/fragment_about_us.xml
@@ -10,21 +10,26 @@
 
     <ImageView
         android:id="@+id/logo"
+        android:layout_marginTop="8dp"
         android:background="@drawable/logo"
         android:layout_width="328dp"
         android:layout_height="270dp"
-        android:layout_marginStart="8dp"
         android:layout_gravity="center"
-        android:layout_marginTop="37dp"
         android:layout_marginEnd="8dp"
         android:contentDescription="@null"/>
 
-    <TextView
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/about_us"
-        android:layout_margin="16dp"
-        android:textSize="15dp"
-        android:textStyle="bold" />
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/about_us"
+            android:layout_margin="16dp"
+            android:textSize="15dp"
+            android:textStyle="bold" />
+
+    </ScrollView>
 
 </LinearLayout>
