Button OFII added

--- a/Estudiante/src/main/res/layout/fragment_my_info.xml
+++ b/Estudiante/src/main/res/layout/fragment_my_info.xml
@@ -134,7 +134,12 @@
                 android:layout_height="45dp"/>
 
 
-
+            <CheckBox
+                android:id="@+id/ofii"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:text="@string/mensaje_ofii"/>
 
             <View
                 android:layout_marginBottom="20dp"
@@ -182,9 +187,7 @@
                 android:id="@+id/btnLogin"
                 android:layout_width="315dp"
                 android:layout_height="55dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="8dp"
+                android:layout_margin="30dp"
                 android:background="@drawable/btn_connecter"
                 android:text="@string/Ac_login_txt_registrarse"/>
         </LinearLayout>
