--- a/Estudiante/src/main/res/layout/content_navigation_otro.xml
+++ b/Estudiante/src/main/res/layout/content_navigation_otro.xml
@@ -7,5 +7,9 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".NavigationOtro.NavigationOtro"
     tools:showIn="@layout/app_bar_navigation_otro">
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/screen_area"></FrameLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
