--- a/Estudiante/src/main/res/menu/activity_navigation_otro_drawer.xml
+++ b/Estudiante/src/main/res/menu/activity_navigation_otro_drawer.xml
@@ -5,34 +5,29 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_home"
-            android:icon="@drawable/ic_menu_camera"
-            android:title="@string/menu_home" />
+            android:id="@+id/menu_aboutUs"
+            android:icon="@drawable/ic_info_black_24dp"
+            android:title="@string/menu_about_us" />
         <item
-            android:id="@+id/nav_gallery"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="@string/menu_gallery" />
+            android:id="@+id/menu_checklist"
+            android:icon="@drawable/liste"
+            android:title="@string/menu_checklist" />
+
         <item
-            android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="@string/menu_slideshow" />
+            android:id="@+id/menu_contacto"
+            android:icon="@drawable/ic_contacts_black_24dp"
+            android:title="@string/menu_contacto" />
+
         <item
-            android:id="@+id/nav_tools"
-            android:icon="@drawable/ic_menu_manage"
-            android:title="@string/menu_tools" />
+            android:id="@+id/menu_gastos"
+            android:icon="@drawable/ic_add_shopping_cart_black_24dp"
+            android:title="@string/menu_gastos" />
+
+        <item
+            android:id="@+id/menu_organizadores"
+            android:icon="@drawable/ic_face_black_24dp"
+            android:title="@string/menu_organizadores" />
     </group>
 
-    <item android:title="Communicate">
-        <menu>
-            <item
-                android:id="@+id/nav_share"
-                android:icon="@drawable/ic_menu_share"
-                android:title="@string/menu_share" />
-            <item
-                android:id="@+id/nav_send"
-                android:icon="@drawable/ic_menu_send"
-                android:title="@string/menu_send" />
-        </menu>
-    </item>
 
 </menu>
