--- a/Estudiante/src/main/res/menu/activity_navigation_otro_drawer.xml
+++ b/Estudiante/src/main/res/menu/activity_navigation_otro_drawer.xml
@@ -11,7 +11,7 @@
         <item
             android:id="@+id/menu_checklist"
             android:icon="@drawable/liste"
-            android:title="@string/menu_checklist" />
+            android:title="@string/menu_checklist_otro" />
 
         <item
             android:id="@+id/menu_contacto"
